Bug 367945 - commit 79ca76a94696ed cases URL hints to be used, even when disabled
Summary: commit 79ca76a94696ed cases URL hints to be used, even when disabled
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-29 06:20 UTC by Markus Trippelsdorf
Modified: 2016-08-29 07:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen capture (2.05 MB, video/x-matroska)
2016-08-29 06:23 UTC, Markus Trippelsdorf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Markus Trippelsdorf 2016-08-29 06:20:32 UTC
Since:
commit 04dce67996a9318494c79c2617e3c88620e8e19e
Author: Martin T. H. Sandsmark <martin.sandsmark@kde.org>
Date:   Sat Aug 27 14:38:26 2016 +0200

    Make the URL hint keyboard modifiers configurable
    
    Instead of hardcoding CTRL which was a bit annoying add checkboxes to
    the profile edit dialog to let the user select which keys to use.
    
    REVIEW: 128778

URL hints are use on every keystroke, even if they are disabled.

Reproducible: Always
Comment 1 Markus Trippelsdorf 2016-08-29 06:23:04 UTC
Created attachment 100837 [details]
screen capture

Screen capture, that shows the issue.
Comment 2 Martin Sandsmark 2016-08-29 07:39:16 UTC
Git commit e7d7069f12fa3b22cbdd88ad81ce538659c75a9f by Martin T. H. Sandsmark.
Committed on 29/08/2016 at 07:38.
Pushed by sandsmark into branch 'master'.

Don't show URL hints if no URL hint modifiers are set.

M  +1    -1    src/TerminalDisplay.cpp

http://commits.kde.org/konsole/e7d7069f12fa3b22cbdd88ad81ce538659c75a9f
Comment 3 Martin Sandsmark 2016-08-29 07:40:53 UTC
Thanks for reporting the issue!