Don't show URL hints if no URL hint modifiers are set.

BUG: 367945